tests/ui/ferrocene/compiler-arguments/upper_c_debuginfo/upper_c_debuginfo_eq-3.rs
//@ check-fail
//@ compile-flags: -Cdebuginfo=3
//~? ERROR incorrect value

fn main() {}

// ferrocene-annotations: um_rustc_C_debuginfo
